--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,9 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 header {
   position: sticky;
   top: 0;
@@ -48,7 +54,7 @@ h2 {
   font-variant-caps: all-small-caps;
   font-weight: 500;
   list-style: none;
-  padding: 15px;
+  padding: 10px;
   background-color: white;
   margin: 20px;
   border: solid black 1px;
@@ -61,7 +67,7 @@ h3 {
   font-variant-caps: all-small-caps;
   font-weight: 500;
   list-style: none;
-  padding: 15px;
+  padding: 10px;
   background-color: white;
   margin: 20px;
   border: solid black 1px;
@@ -72,7 +78,7 @@ h3 {
   grid-template-columns: repeat(auto-fit, minmax 1000px, 1fr);
   background-color: #f5f5f5;
   padding: 10px;
-  margin: 10px;
+  margin: 20px;
 }
 
 .tienda {
@@ -120,7 +126,6 @@ h3 {
 }
 
 .tienda-fisica {
-  margin: 10px;
   padding: 10px;
   display: flex;
   justify-content: center;
@@ -155,7 +160,7 @@ h3 {
   grid-template-columns: repeat(auto-fit, minmax 600px, 1fr);
   background-color: #f5f5f5;
   padding: 10px;
-  margin: 10px;
+  margin: 20px;
 }
 
 .style-clips {
@@ -210,7 +215,7 @@ h3 {
 #events {
   background-color: #f5f5f5;
   padding: 10px;
-  margin: 10px;
+  margin: 20px;
 }
 
 .col {
@@ -238,7 +243,7 @@ h3 {
 #us {
   background-color: #f5f5f5;
   padding: 10px;
-  margin: 10px;
+  margin: 20px;
 }
 
 .nosotros {
@@ -268,13 +273,13 @@ h3 {
   font-size: x-large;
   font-weight: 800;
   text-shadow: 1px 1px rgba(0, 0, 0, 0.437);
-  margin: 15px;
+  margin: 20px;
 }
 
 #contact {
   background-color: #f5f5f5;
   padding: 10px;
-  margin: 10px;
+  margin: 20px;
 }
 
 .row {
@@ -323,7 +328,7 @@ h3 {
   justify-content: center;
   border: solid black 1px;
   border-radius: 5px;
-  margin: 15px;
+  margin: 20px;
   font-family: "Rubik", sans-serif;
   color: black;
   font-variant-caps: all-small-caps;
@@ -372,7 +377,7 @@ h3 {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax 600px, 1fr);
   padding: 10px;
-  margin: 10px;
+  margin: 20px;
   background-color: #f5f5f5;
 }
 
