--- a/style/style.css
+++ b/style/style.css
@@ -23,6 +23,10 @@ header {
   color: black;
   font-variant-caps: all-small-caps;
   font-weight: 500;
+  /*font-family: $main-font;
+  color: black;
+  font-variant-caps: all-small-caps;
+  font-weight: 500;*/
 }
 
 .dropdown-item {
@@ -30,6 +34,10 @@ header {
   color: black;
   font-variant-caps: all-small-caps;
   font-weight: 500;
+  /*font-family: $main-font;
+  color: black;
+  font-variant-caps: all-small-caps;
+  font-weight: 500;*/
 }
 
 .fa-brands {
@@ -42,6 +50,10 @@ h2 {
   color: black;
   font-variant-caps: all-small-caps;
   font-weight: 500;
+  /*font-family: $main-font;
+      color: black;
+      font-variant-caps: all-small-caps;
+      font-weight: 500;*/
   list-style: none;
   padding: 10px;
   background-color: white;
@@ -55,6 +67,10 @@ h3 {
   color: black;
   font-variant-caps: all-small-caps;
   font-weight: 500;
+  /*font-family: $main-font;
+      color: black;
+      font-variant-caps: all-small-caps;
+      font-weight: 500;*/
   list-style: none;
   padding: 10px;
   background-color: white;
@@ -84,6 +100,8 @@ h3 {
 .tienda {
   display: flex;
   justify-content: space-evenly;
+  /*display: flex;
+  justify-content: space-evenly;*/
   margin: 0;
   padding: 0;
 }
@@ -91,6 +109,8 @@ h3 {
 .tienda-productos {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax 600px, 1fr);
+  /*display: grid;
+  grid-template-columns: repeat(auto-fit, minmax (600px, 1fr));*/
   margin: 10px;
   padding: 10px;
 }
@@ -101,6 +121,8 @@ h3 {
   list-style: none;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
+  /*display: grid;
+  grid-template-columns: repeat(3, 1fr);*/
 }
 
 .productos li {
@@ -127,6 +149,8 @@ h3 {
   padding: 10px;
   display: flex;
   justify-content: center;
+  /*display: flex;
+  justify-content: center;*/
   margin: 10px;
 }
 
@@ -154,6 +178,8 @@ h3 {
 #styling {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax 600px, 1fr);
+  /*display: grid;
+  grid-template-columns: repeat(auto-fit, minmax (600px, 1fr));*/
   background-color: #f5f5f5;
   padding: 10px;
   margin: 20px;
@@ -162,6 +188,8 @@ h3 {
 .style-clips {
   display: flex;
   justify-content: space-around;
+  /*display: flex;
+  justify-content: space-around;*/
 }
 
 .clips {
@@ -184,12 +212,16 @@ h3 {
 .looks {
   display: flex;
   justify-content: space-around;
+  /*display: flex;
+  justify-content: space-around;*/
   row-gap: 10px;
 }
 
 .looks-fotos {
   display: flex;
   justify-content: space-around;
+  /* display: flex;
+  justify-content: space-around;*/
 }
 
 .looks-fotos a {
@@ -297,6 +329,10 @@ h3 {
   color: black;
   font-variant-caps: all-small-caps;
   font-weight: 500;
+  /*font-family: $main-font;
+      color: black;
+      font-variant-caps: all-small-caps;
+      font-weight: 500;*/
 }
 
 .mb-3 label p {
@@ -304,11 +340,17 @@ h3 {
   color: black;
   font-variant-caps: all-small-caps;
   font-weight: 500;
+  /*font-family: $main-font;
+  color: black;
+  font-variant-caps: all-small-caps;
+  font-weight: 500; */
 }
 
 .grid {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
+  /*display: grid;
+  grid-template-columns: repeat(3, 1fr);*/
   border: solid black 1px;
   border-radius: 5px;
   margin: 10px;
@@ -326,6 +368,10 @@ h3 {
   color: black;
   font-variant-caps: all-small-caps;
   font-weight: 500;
+  /*font-family: $main-font;
+  color: black;
+  font-variant-caps: all-small-caps;
+  font-weight: 500;*/
   font-size: medium;
   background-color: white;
 }
@@ -350,6 +396,10 @@ h3 {
   color: black;
   font-variant-caps: all-small-caps;
   font-weight: 500;
+  /*font-family: $main-font;
+  color: black;
+  font-variant-caps: all-small-caps;
+  font-weight: 500;*/
 }
 
 .g-col-4 ul li button {
@@ -369,6 +419,8 @@ h3 {
 .camisas {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax 600px, 1fr);
+  /*display: grid;
+  grid-template-columns: repeat(auto-fit, minmax (600px, 1fr));*/
   padding: 10px;
   margin: 20px;
   background-color: #f5f5f5;
@@ -377,6 +429,8 @@ h3 {
 .tienda-camisas {
   display: flex;
   justify-content: space-evenly;
+  /*display: flex;
+  justify-content: space-evenly;*/
   margin: 0;
   padding: 0;
 }
@@ -384,6 +438,8 @@ h3 {
 .productos-camisas {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax 600px, 1fr);
+  /*display: grid;
+   grid-template-columns: repeat(auto-fit, minmax (600px, 1fr));*/
   margin: 10px;
   padding: 10px;
 }
@@ -394,6 +450,8 @@ h3 {
   list-style: none;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
+  /*display: grid;
+  grid-template-columns: repeat(3, 1fr);*/
 }
 
 .productos-items li {
@@ -418,6 +476,8 @@ h3 {
 .eventos {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax 600px, 1fr);
+  /*display: grid;
+  grid-template-columns: repeat(auto-fit, minmax (600px, 1fr));*/
   padding: 10px;
   margin: 10px;
   background-color: #f5f5f5;
@@ -426,6 +486,8 @@ h3 {
 .articulo {
   display: flex;
   justify-content: space-around;
+  /*display: flex;
+  justify-content: space-around;*/
 }
 
 .articulo-cajas {
@@ -436,6 +498,8 @@ h3 {
 .articulo-cajas-footer {
   display: flex;
   justify-content: space-around;
+  /*display: flex;
+  justify-content: space-around;*/
 }
 
 .jevi-portada {
@@ -452,6 +516,8 @@ h3 {
 .jevi-retratos {
   display: flex;
   justify-content: space-around;
+  /*display: flex;
+  justify-content: space-around;*/
   padding: 10px;
 }
 
@@ -579,7 +645,7 @@ h3 {
 }
 @media (max-width: 880px) {
   .nosotros-texto p {
-    font-size: large;
+    font-size: medium;
     font-weight: 800;
   }
   .g-col-4 a img {
