--- a/scss/style.scss
+++ b/scss/style.scss
@@ -471,6 +471,7 @@ list-style: none;
      border-radius: $radius; 
     }
     .jevi-tienda{
+     @include flex (flex, space-around);
      padding: $padding-box;
     }
     .jevi-tienda img {
@@ -534,6 +535,9 @@ list-style: none;
     .looks-fotos a img {
         width: 180px;  
     }
+    .articulo-cajas-footer {
+        flex-direction: column;
+    }
 }
 @media (max-width:500px){
     .clips div iframe{
@@ -555,6 +559,12 @@ list-style: none;
 .g-col-4 a img{
     margin-top: 5px;
     width: 20%;
+}
+.jevi-tienda img {
+    width: 350px;
+}
+.jevi-retratos img {
+    width: 50%;
 }
 }
 @media (max-width:390px){
@@ -636,11 +646,23 @@ list-style: none;
         display: flex;
         flex-direction: column;
      }
+     .jevi-tienda img {
+        width: 250px;
+     }
+     .jevi-retratos img {
+        width: 55%;
+     }
 }
 @media (max-width:350px){
     .nosotros-texto p{
         font-size:small; 
     }
+    .jevi-retratos {
+        flex-direction: column;
+     }
+     .jevi-retratos img {
+        width: 80%;
+     }
 }
 @media (max-width:780px){
     .col iframe {
