--- a/style/style.css
+++ b/style/style.css
@@ -547,6 +547,8 @@ h3 {
 }
 
 .jevi-tienda {
+  display: flex;
+  justify-content: space-around;
   padding: 10px;
 }
 
@@ -614,6 +616,9 @@ h3 {
   .looks-fotos a img {
     width: 180px;
   }
+  .articulo-cajas-footer {
+    flex-direction: column;
+  }
 }
 @media (max-width: 500px) {
   .clips div iframe {
@@ -635,6 +640,12 @@ h3 {
   .g-col-4 a img {
     margin-top: 5px;
     width: 20%;
+  }
+  .jevi-tienda img {
+    width: 350px;
+  }
+  .jevi-retratos img {
+    width: 50%;
   }
 }
 @media (max-width: 390px) {
@@ -717,10 +728,22 @@ h3 {
     display: flex;
     flex-direction: column;
   }
+  .jevi-tienda img {
+    width: 250px;
+  }
+  .jevi-retratos img {
+    width: 55%;
+  }
 }
 @media (max-width: 350px) {
   .nosotros-texto p {
     font-size: small;
+  }
+  .jevi-retratos {
+    flex-direction: column;
+  }
+  .jevi-retratos img {
+    width: 80%;
   }
 }
 @media (max-width: 780px) {
